SVN $Id$
SVN $URL$
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    25 Aug 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140825
Tag Summary: Change field name for variables read in when using monthly
             forcing ("TEMPERATURE01" instead of "TEMPERATURE 1" and so on).
             Also update some error messages in io_netcdf to clarify what
             variable is not found.

Files Modified:
M       source/forcing_pt_interior.F90
M       source/forcing_s_interior.F90
M       source/io_netcdf.F90
===============================================================================
Tag Creator: mlevy
Developers:  klindsay
Tag Date:    5 Aug 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140805
Tag Summary: Add 300 and 360 proc layouts for gx1v6 (used for fully coupled
             runs with BGC); these decomps are two or three times faster than
             auto-decomp, which means ocean is no longer the bottleneck in the
             coupled runs.

Files Modified:
M       bld/pop_decomp.xml
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    29 July 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140729
Tag Summary: Bug in CVMix Makefile caused problems with PGI; updated CVMix tag

Files Modified:
 M      .
M       SVN_EXTERNAL_DIRECTORIES
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    28 July 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140728
Tag Summary: OCN_ONED variable was renamed OCN_ONEDIM in env_run.xml

Files Modified:
M       bld/build-namelist
M       bld/namelist_files/namelist_defaults_pop2.xml
===============================================================================
Tag Creator: santos
Developers:  santos
Tag Date:    14 July 2014
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20140714a